hide scroll reveal elements to prevent flickerπ

--- a/_sass/global/global.scss
+++ b/_sass/global/global.scss
@@ -2,6 +2,11 @@
 
 @import "../variables";
 
+// scroll reveal
+[data-scroll-reveal] {
+  visibility: hidden;
+}
+
 body {
   background-color: $seashell;
 }
